syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message InboundHashToCctx {
  string inbound_hash = 1;
  repeated string cctx_index = 2;
}
